# spec-driven-todo-ai

./: .env.example  .flake8  .gitignore  .vercelignore  AGENTS.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_TESTING.md  BETTER_AUTH_MIGRATION_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  OAUTH_SESSION_FIX.md  OAUTH_SETUP_GUIDE.md  PHASE_II_COMPLETE.md  PHASE_II_COMPLETION.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  check_better_auth_schema.py  check_tables.py  package-lock.json  pyproject.toml  requirements.txt  test-better-auth-setup.ts  vercel.json
.claude/: settings.local.json
.github/workflows/: frontend-deploy.yml
.spec-kit/: config.yaml
.specify/memory/: constitution.md
api/: index.py  requirements.txt
backend/: .env.example  .gitignore  CLAUDE.md  README.md  database.py  main.py  models.py  recreate_db.py  requirements.txt  schemas.py  test.db  test_api.py  test_auth_api.py  validate_setup.py
backend/alembic/: env.py
backend/auth/: middleware.py  routes.py  security.py
backend/routes/: tasks.py  users.py
backend/services/: task_service.py  user_service.py
frontend/: CLAUDE.md  QUICKSTART.md  README.md  UI_UX_IMPLEMENTATION.md  VERCEL_DEPLOYMENT.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  reinstall.sh  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  theme-provider.tsx
frontend/components/: AddTaskForm.tsx  ErrorBoundary.tsx  ExportButton.tsx  TaskItem.tsx  TaskList.tsx  TaskStats.tsx  ThemeToggle.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: useLocalStorage.ts  useMediaQuery.ts  useTaskManager.ts
frontend/lib/: api.ts  auth-client-fixed.ts  auth-client.ts  auth-fixed.ts  auth-new.ts  auth.ts  auth.ts.new  constants.ts  utils.ts
frontend/public/: sw.js
frontend/scripts/: check-database.sql  setup-better-auth.ts  test-auth-setup.ts
frontend/services/: taskService.ts
frontend/types/: task.ts
scripts/: migrate-users-to-better-auth.ts
specs/: constitution.md
specs/001-backend-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-todo-app/: data-model.md  plan.md  spec.md  (+3 more)
(+138 files in other folders)
