[project]
name = "cli-todo-app"
version = "0.1.0"
description = "A command-line todo application"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "PyJWT==2.8.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.23",
    "sqlmodel==0.0.16",
    "uvicorn[standard]==0.24.0",
]

[project.scripts]
todo = "src.cli.main:main"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']
